# cosmic-sync-server

./: .dockerignore  .env.example  .env.sample  .gitignore  .tool-versions  Cargo.toml  Dockerfile  ENVIRONMENT_SETUP.md  OAUTH_UPDATE_GUIDE.md  README.md  S3_SETUP.md  aws-secret-example.json  aws-secret-production.json  aws-secret-staging.json  build.rs  config-examples.md  development.md  docker-compose.yml  fix_cargo.sh  quick_check.sql  server_log.txt
.github/: CODEOWNERS
.github/workflows/: ci.yml  deploy-production.yml  deploy-staging.yml
.github/workflows.deactivated/: ci.yml  deploy-production.yml  deploy-staging.yml
config/: config.json  sync_config.toml
proto/: sync.proto
scripts/: cleanup_unused_tables.sql  final_test.sql  migrate_files_to_s3.sql  run_migration.sh  run_migration_v3.sh  setup_oauth_db.sh  setup_oauth_tables.sql  test_watcher_conditions.sql
src/: error.rs  lib.rs  main.rs  monitoring.rs  sync.rs  validation.rs
src/abstractions/: middleware.rs  mod.rs  plugins.rs  services.rs
src/auth/: mod.rs  oauth.rs  oauth.rs.backup  token.rs
src/config/: constants.rs  mod.rs  secrets.rs  settings.rs
src/container/: builder.rs  mod.rs  registry.rs
src/domain/: entities.rs  events.rs  mod.rs  repositories.rs  services.rs  value_objects.rs
src/handlers/: api.rs  auth_handler.rs  device_handler.rs  device_handler_tests.rs  file_handler.rs  health.rs  metrics.rs  mod.rs  oauth.rs  sync_handler.rs  watcher_handler.rs
src/handlers/file/: delete.rs  download.rs  exists.rs  find.rs  list.rs  mod.rs  upload.rs
src/models/: account.rs  auth.rs  device.rs  file.rs  mod.rs  watcher.rs
src/server/: app_state.rs  connection_cleanup.rs  connection_handler.rs  connection_tracker.rs  event_bus.rs  http.rs  mod.rs  notification_manager.rs  service.rs  startup.rs
src/server/common/: component.rs  health.rs  lifecycle.rs  metrics.rs  mod.rs  status.rs
src/server/components/: mod.rs  sync_server.rs
src/services/: auth_service.rs  device_service.rs  encryption_service.rs  file_service.rs  mod.rs  version_service.rs  watcher_service.rs
src/storage/: cache.rs  file.rs  file_storage.rs  memory.rs  mod.rs  mysql.rs  mysql_account.rs  mysql_auth.rs  mysql_device.rs  mysql_file.rs  mysql_models.rs  mysql_storage.rs  mysql_watcher.rs  mysql_watcher.rs.fix  pool.rs
src/subscription/: watcher_group_updater.rs
src/utils/: auth.rs  crypto.rs  db.rs  helpers.rs  mod.rs  response.rs  time.rs  validator.rs
test/: grpc_test.py
tests/: device_handler_integration.rs  grpc_auth_status.rs
tests/common/: mod.rs
tools/: path_test  path_test.rs
